--- a/work/scss/_main.scss
+++ b/work/scss/_main.scss
@@ -86,6 +86,16 @@ body{
         }
 
         .content-wrapper{
+            .text-on-background{
+                color: $main-white;
+                max-width: 500px;
+                margin: auto;
+                text-align: center;
+                p{
+                    margin-bottom: $main-space;
+                }
+
+            }
             padding: $main-space;
             #playerScore{
                 @media only screen and (max-width: 600px) {
